<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ie.gmit.computing.MenuActivity"
    android:orientation="vertical" >
	<TextView
        android:id="@+id/info_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info_text"
        android:textColor="#000000"
        android:textStyle="italic"
        android:textSize="20sp" />
	<TextView
        android:id="@+id/blank"
        android:layout_width="match_parent"
    	android:layout_height="wrap_content" 
    	android:textColor="#000000"
    	android:textSize="5sp"
  		android:text="@string/blank" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
	        <TextView 
		    android:id="@+id/userInfo" 
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content"
		    android:textSize="16sp" 
		    android:textColor="#000000" />
	        <TextView
        android:id="@+id/blank2"
        android:layout_width="match_parent"
    	android:layout_height="wrap_content" 
    	android:textColor="#000000"
    	android:textSize="5sp"
  		android:text="@string/blank2" />
    </LinearLayout>
	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" > 
	    <TextView
	        android:id="@+id/latitude_text"
	        android:layout_width="match_parent"
	    	android:layout_height="wrap_content" 
	    	android:textColor="#000000"
	    	android:textSize="16sp"
	  		android:text="@string/lati" />
	    <TextView
	        android:id="@+id/longitude_text"
	        android:layout_width="match_parent"
	    	android:layout_height="wrap_content"
	    	android:textSize="16sp"
	    	android:textColor="#000000"
	    	android:text="@string/longi" />
	</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="horizontal" >
    
	    <Button
	        android:id="@+id/takePhoto"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/take_photo" />
	    
	    <Button
	        android:id="@+id/editTree"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/edit_tree" /> 
        </LinearLayout>

</LinearLayout>
